--- a/web/src/pages/volunteerList/volunteerList.css
+++ b/web/src/pages/volunteerList/volunteerList.css
@@ -14,4 +14,9 @@
 .volunteer__name {
     font-size: 1.2rem;
     font-weight: 600;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 170px;
 }
